--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "url": "https://github.com/lexoyo/email-form-data.git"
   },
   "dependencies": {
+    "akismet-api": "^6.0.0",
     "formidable": "1.1.1",
     "nodemailer": "4.0.1"
   },
